2006-08-30 16:26  ntiffin

	* ChangeLog, ExplorerModel.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Fix constraints, columns,
	  triggers.

2006-08-30 10:48  ntiffin

	* ChangeLog, Connection.h, Connection.m, DataSource.h, Database.h,
	  Databases.h, ExplorerModel.h, ExplorerModel.m, ExplorerNode.h,
	  Field.h, Fields.h, PGCocoaDB.h, Record.h, RecordSet.h, Schema.h,
	  Schema.m, Table.h, UnitTest-Info.plist,
	  UnitTest/pgCocoaDBSchemaTest.h, UnitTest/pgCocoaDBSchemaTest.m:
	  Restructure for schema threaded processing.

2006-08-26 07:25  ntiffin

	* ChangeLog, Connection.m, ExplorerModel.m, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Add some comments and reformat
	  functions.

2006-08-19 07:06  ntiffin

	* ChangeLog, ExplorerModel.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Add display of index column
	  names.

2006-08-13 18:50  ntiffin

	* ChangeLog, ExplorerModel.h, ExplorerModel.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Explorer API change to accomodate
	  preferences.

2006-08-12 11:38  ntiffin

	* ChangeLog, Connection.m, Databases.m, ExplorerModel.m,
	  ExplorerNode.m, Field.m, Fields.m, RecordSet.m, Schema.m,
	  Table.m: More memory cleanup.

2006-08-11 13:01  ntiffin

	* ChangeLog, Connection.h, Connection.m, DataSource.m, Database.m,
	  Databases.m, ExplorerModel.m, ExplorerNode.m, Field.m, Fields.m,
	  Record.h, Record.m, RecordSet.m, Table.m: Fix a number of memory
	  issues.

2006-07-16 18:13  ntiffin

	* ChangeLog, Connection.h, Connection.m, ExplorerModel.m,
	  ExplorerNode.h, ExplorerNode.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Add color to Explorer View, add
	  index count function.

2006-06-24 11:16  ntiffin

	* Connection.h, Connection.m, ExplorerModel.m, Schema.m: Add SQL
	  log functions, correct bug in schema dealloc.

2006-06-21 06:47  ntiffin

	* ChangeLog: Test commits mail list.

2006-06-20 11:26  ntiffin

	* ChangeLog, Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Update for