@@ -1,3 +1,10 @@
+2006-08-31 19:53  ntiffin
+
+	* ChangeLog, Connection.h, Connection.m, ExplorerModel.h,
+	  ExplorerModel.m, ExplorerNode.h, ExplorerNode.m, Schema.h,
+	  Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Fix for PGconn not
+	  being thread safe. Migrate to new PQconnectdb API.
+
 2006-08-30 16:26  ntiffin
 
 	* ChangeLog, ExplorerModel.m, Schema.h, Schema.m,
